<resources>
    <string name="app_name">TutOn Students</string>
    <string name="scanner">Scanner</string>
    <string name="group">Group</string>
    <string name="profile">Profile</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="groups_test_text">Здесь пока нет групп</string>
    <string name="lessons_test_text">У вас пока нет занятий</string>
    <string name="profile_test_text">Профиль</string>
    <string name="grup_list_item_text">Group_name</string>
    <string name="groups_list_item_content_button_description">Open journal</string>
    <string name="groups_fab_content_description">Create new journal</string>
    <string name="groups_text">Groups</string>
    <string name="password_edit_text_hint">Пароль</string>

    <string name="SHARED_PREFS_ID">PREFS_ID</string>
    <string name="SHARED_PREFS_LOGIN">PREFS_LOGIN</string>
    <string name="SHARED_PREFS_PASSWORD">PREFS_PASSWORD</string>

    <string name="SHARED_PREFS_TELEGRAM">PREFS_TELEGRAM</string>
    <string name="SHARED_PREFS_GITHUB">PREFS_GITHUB</string>
    <string name="SHARED_PREFS_PHOTO">PREFS_PHOTO</string>

    <string name="SHARED_PREFS_NAME">PREFS_NAME</string>
    <string name="SHARED_PREFS_SURNAME">PREFS_SURNAME</string>
    <string name="fragment_group_add_header_text">Creating a group</string>
    <string name="fragment_group_add_group_name_hint">Group name</string>
    <string name="student_list_item_name">Name</string>
    <string name="studet_list_item_id">student_id</string>
    <string name="lesson_deletion_text">Удалить занятие</string>
    <string name="lesson_upload_text">Загрузить QR-code</string>
    <string name="lesson_copy_link_text">Копировать ссылку</string>
    <string name="no_groups_hint">Здесь пока нет групп. Добавьте первую!</string>
    <string name="group_scanned_text">Группа</string>
    <string name="group_scanned_date">Дата</string>
    <string name="group_scanned_time">Время</string>
    <string name="group_scanned_theme">Тема</string>
    <string name="table_group_name_header">Название группы</string>
    <string name="login_et_hint">Логин</string>
    <string name="SHARED_PREFS_CHECKED">false</string>
    
    <!--    Months strings-->
    <array name="group_dropdown_months">
        <item name="all">Все</item>
        <item name="september">Сентябрь</item>
        <item name="october">Октябрь</item>
        <item name="november">Ноябрь</item>
        <item name="december">Декабрь</item>
        <item name="january">Январь</item>
        <item name="february">Февраль</item>
        <item name="march">Март</item>
        <item name="april">Апрель</item>
        <item name="may">Май</item>
        <item name="june">Июнь</item>
        <item name="july">Июль</item>
        <item name="august">Август</item>
    </array>

    <array name="months_strings">
        <item name="january">Январь</item>
        <item name="february">Февраль</item>
        <item name="march">Март</item>
        <item name="april">Апрель</item>
        <item name="may">Май</item>
        <item name="june">Июнь</item>
        <item name="july">Июль</item>
        <item name="august">Август</item>
        <item name="september">Сентябрь</item>
        <item name="october">Октябрь</item>
        <item name="november">Ноябрь</item>
        <item name="december">Декабрь</item>
    </array>
</resources>