<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cnb_unselectedColor="@color/main_gray">

    <item
        android:id="@+id/scanner"
        android:icon="@drawable/ic_scanner"
        android:title="@string/scanner"
        app:cnb_iconColor="@color/white"
        app:cnb_backgroundColor="@color/main_blue"
        app:cnb_textColor="@color/white"
        android:enabled="true"/>
    <item
        android:id="@+id/group"
        android:icon="@drawable/ic_group"
        android:title="@string/group"
        app:cnb_iconColor="@color/white"
        app:cnb_backgroundColor="@color/main_blue"
        app:cnb_textColor="@color/white"/>
    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"
        app:cnb_iconColor="@color/white"
        app:cnb_backgroundColor="@color/main_blue"
        app:cnb_textColor="@color/white"/>

</menu>